Fixes :
- Remove the jhipster icon
- Fixing overlap isssue on mobile device
- Updating manifest.webapp
- Adding favicon

--- a/src/main/webapp/app/layouts/navbar/navbar.scss
+++ b/src/main/webapp/app/layouts/navbar/navbar.scss
@@ -75,10 +75,11 @@ Logo styles
         .logo-img {
             height: 45px;
             width: 70px;
-            display: inline-block;
+            //display: inline-block;
             vertical-align: middle;
-            background: url("../../../content/images/logo-jhipster.png") no-repeat center center;
+            background: url("../../../content/images/lock.svg") no-repeat center center;
             background-size: contain;
+            display: none;
         }
     }
 }
@@ -116,6 +117,6 @@ Custom solocked
 }
 
 .background-login {
-    background-color: transparent;
     box-shadow: 0 0px 0px 0 rgba(0,0,0,0);
+    background-color: $solocked-secondary-color;
 }
