--- a/src/main/webapp/content/scss/_custom-variables.scss
+++ b/src/main/webapp/content/scss/_custom-variables.scss
@@ -6,7 +6,7 @@ $font-color-warning: rgb(244, 67, 54);
 $loginColor: white;
 
 $solocked-primary-color: #296a64;
-$solocked-secondary-color: #062925;
+$solocked-secondary-color: #093530;
 $linear-gradient: radial-gradient(circle at center, $solocked-primary-color 0, #164944, $solocked-secondary-color 100%);
 
 /**
