--- a/src/main/webapp/content/scss/global.scss
+++ b/src/main/webapp/content/scss/global.scss
@@ -10,7 +10,6 @@ body {
     color: $font-color-primary;
     margin: 0;
     padding: 0;
-    height: 100%;
 }
 
 h1, h2, h3, h4 {
@@ -290,8 +289,7 @@ Social button
 ========================================================================== */
 
 .background-offline {
-    background: linear-gradient($solocked-primary-color, $solocked-secondary-color);
-    overflow-x: auto;
+    background-color: $solocked-secondary-color;
     height: 100%;
 }
 
